<resources>
    <string name="app_name">Farmerverse</string>
    <string name="AddSeed">Add a Seed</string>
    <string name="seed_name_hint">Seed Name...</string>
    <string name="twodecimals">00.00</string>
    <string name="spacing_in_cm">Spacing in cm</string>
    <string name="name_of_seed">Name of Seed</string>
    <string name="estimated_growth_time_in_days">Estimated Growth Time in Days</string>
    <string name="_0_5">0.5</string>
    <string name="weight_per_seed_in_grams">Weight Per Seed in Grams</string>
    <string name="submit">Submit</string>
    <string name="calculator">Calculator</string>
    <string name="market">Market</string>
    <string name="camera">Camera</string>
    <string name="inventory">Inventory</string>
    <string name="days_till_harvest">Until Harvest</string>
    <string name="temp_for_temp">Temp for temp</string>
    <string name="home">Home</string>
    <string name="SeedType">Type of Seed</string>
    <string name="_32_cm">32 cm</string>
    <string name="land_calculator">Calculate Seed Amount</string>
    <string name="square_meters">Square Meters</string>
    <string name="_32_square_meters">32 Square meters</string>
    <string name="seed_type">Seed Type</string>
    <string name="manually_add_seed">Manually add seed</string>
    <string name="distance_between_the_seeds">Distance between the seeds</string>
    <string name="total_of_seeds_needed">Total of seeds needed</string>
    <string name="seeds_per_square_meter">Seeds per square meter</string>
    <string name="calculate">Calculate</string>
    <string name="edit_seed">Edit Seed</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_are_about_to_delete_the_x_seed">You are about to delete the x seed</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no_take_me_back">No, Take Me Back</string>
    <string name="market_header">Price is individual. Currency is CAD. Enjoy!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="AddProduct">Add a Product</string>
    <string name="product_name_hint">Papaya</string>
    <string name="name_of_prod">Product Name</string>
    <string name="product_qty_hint">5</string>
    <string name="qty_of_prod">Quantity</string>
    <string name="product_price_hint">12.99</string>
    <string name="price_of_prod">Price</string>
    <string name="done">Add</string>
    <string name="go_home">Home</string>
    <string name="go_market">Market</string>
</resources>