<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="271dp"
        android:layout_height="144dp"
        android:layout_marginTop="32dp"
        android:background="#AE1E1E"
        android:contentDescription="@string/temp_for_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Harverst"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="53dp"
        android:text="@string/calculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginEnd="32dp"
        android:text="@string/market"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginEnd="32dp"
        android:text="@string/inventory"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/Harverst"
        android:layout_width="269dp"
        android:layout_height="49dp"
        android:layout_marginEnd="128dp"
        android:text="@string/days_till_harvest"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>