<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculatorFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plant" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSeedsPerSquareMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="64dp"
            android:textSize="@dimen/TitleText"
            app:layout_constraintBottom_toBottomOf="@+id/txtSeedsNeeded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtSeedsNeeded" />

        <EditText
            android:id="@+id/editTextDistanceBetweenTwoSeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_32_cm"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/txtCalculatorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/land_calculator"
            android:textSize="@dimen/TitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/square_meters"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/editTxtSquareMeters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTxtSquareMeters" />

        <EditText
            android:id="@+id/editTxtSquareMeters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/_32_square_meters"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCalculatorTitle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/seed_type"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/SeedType"
            android:minHeight="48dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTxtSquareMeters"
            app:layout_constraintTop_toBottomOf="@+id/editTxtSquareMeters" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/distance_between_the_seeds"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/total_of_seeds_needed"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtSeedsNeeded"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/seeds_per_square_meter"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/txtSeedsNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/TitleText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="134dp"
            android:layout_height="55dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="16dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/btnAddSeedCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Add a Seed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>