<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#4C83A8"
        android:contentDescription="@string/temp_for_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHarvest"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <Button
        android:id="@+id/btnCalculator"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/calculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMarket"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginEnd="32dp"
        android:text="@string/market"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCalculator" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculator" />

    <Button
        android:id="@+id/btnInventory"
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:layout_marginEnd="32dp"
        android:text="@string/inventory"
        app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCamera" />

    <TextView
        android:id="@+id/txtHarvest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_till_harvest"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="Set Reminder for Picture Day"
        android:onClick="setDate"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/btnDate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="170dp"-->
<!--        android:layout_marginEnd="147dp"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tvDate"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>