<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtAddSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@string/edit_seed"
        android:textSize="@dimen/TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtSeedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:gravity="center"
        android:hint="@string/seed_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddSeed" />

    <EditText
        android:id="@+id/editTxtSpaceBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:gravity="center"
        android:hint="@string/twodecimals"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameOfSeed" />

    <TextView
        android:id="@+id/txtSpacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@string/spacing_in_cm"
        app:layout_constraintStart_toStartOf="@+id/editTxtSpaceBetween"
        app:layout_constraintTop_toBottomOf="@+id/editTxtSpaceBetween" />

    <TextView
        android:id="@+id/txtNameOfSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@string/name_of_seed"
        app:layout_constraintStart_toStartOf="@+id/editTxtSeedName"
        app:layout_constraintTop_toBottomOf="@+id/editTxtSeedName" />

    <EditText
        android:id="@+id/editTxtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:gravity="center"
        android:hint="@string/twodecimals"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpacing" />

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="Quanity in KG"
        app:layout_constraintStart_toStartOf="@+id/editTxtQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editTxtQuantity" />

    <EditText
        android:id="@+id/editTxtGrowthTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:gravity="center"
        android:hint="50"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantity" />

    <TextView
        android:id="@+id/txtDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@string/estimated_growth_time_in_days"
        app:layout_constraintStart_toStartOf="@+id/editTxtGrowthTime"
        app:layout_constraintTop_toBottomOf="@+id/editTxtGrowthTime" />

    <EditText
        android:id="@+id/editTxtWeightPerSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/_0_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDays" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@string/weight_per_seed_in_grams"
        app:layout_constraintStart_toStartOf="@+id/editTxtWeightPerSeed"
        app:layout_constraintTop_toBottomOf="@+id/editTxtWeightPerSeed" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:minHeight="@dimen/main_btn_height"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:text="@android:string/cancel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/material_red_800"
        android:fontFamily="@font/roboto_slab_semi_bold"
        android:minHeight="@dimen/main_btn_height"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>